--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -380,7 +380,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://stkinv.net/register?code=" data-type="Situka" data-code="3UycQ8cn" target="_blank"><b>斯图卡</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://stkinv.net/#/register?code=" data-type="Situka" data-code="3UycQ8cn" target="_blank"><b>斯图卡</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -410,7 +410,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://stkinv.net/register?code=" data-type="Situka" data-code="3UycQ8cn" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://stkinv.net/#/register?code=" data-type="Situka" data-code="3UycQ8cn" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -733,16 +733,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-11-28-clash-node-daily-updates.htm" title="11月28日→19M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">11月28日→19M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-17-node-share-links.htm" title="8月17日→18.2M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">8月17日→18.2M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-1-clash-node.htm" title="4月1日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接">4月1日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-29-free-subscribe-node.htm" title="7月29日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">7月29日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-11-shadowrocket-node.htm" title="4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-14-free-node-subscribe-links.htm" title="3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-28-free-shadowrocket-node.htm" title="10月28日→20.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">10月28日→20.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-9-free-clash.htm" title="11月9日→21.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">11月9日→21.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-8-free-ssr-node.htm" title="8月8日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">8月8日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-18-clash-v2ray-ss-ssr.htm" title="9月18日→20M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">9月18日→20M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-23-node-share.htm" title="10月23日→20.3M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月23日→20.3M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-18-free-clash.htm" title="6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-30-clash-node.htm" title="9月30日→21.9M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">9月30日→21.9M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-4-free-clash.htm" title="10月4日→18.1M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">10月4日→18.1M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-29-shadowrocket-node.htm" title="10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-30-free-shadowrocket-node.htm" title="7月30日→20.3M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">7月30日→20.3M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-10-clash-node-daily-updates.htm" title="8月10日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">8月10日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm" title="3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接">3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-10-node-share-links.htm" title="7月10日→21.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">7月10日→21.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-1-clash-windows.htm" title="6月1日→20.1M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">6月1日→20.1M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -754,7 +754,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
